--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip install langchain==0.0.149
-pip install unstructured==0.6.5
-pip install pdf2image==1.16.3
-pip install pytesseract==0.3.10
-pip install pypdf==3.8.1
-pip install faiss-cpu==1.7.4
+langchain==0.0.149
+unstructured==0.6.5
+pdf2image==1.16.3
+pytesseract==0.3.10
+pypdf==3.8.1
+faiss-cpu==1.7.4
